Bug 154179 - Crash opening Chapter Numbering dialog, when current paragraph has an outline style, but DF outline level "Text Body"
Summary: Crash opening Chapter Numbering dialog, when current paragraph has an outline...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-14 07:51 UTC by Mike Kaganski
Modified: 2023-05-10 23:20 UTC (History)
0 users

See Also:
Crash report or crash signature: ["SvListView::SelectListEntry(SvTreeListEntry *,bool)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-03-14 07:51:35 UTC
This bug was filed from the crash reporting server and is br-7fb5cc58-99ae-404a-8a28-7d8f49971fc2.
=========================================

1. In a new text document, open Tools->Chapter Numbering, and set level 1's paragraph style to [None]. Press OK.
Step #1 makes sure that we can edit outline level of paragraphs that use "Heading 1" style.
2. Assign Heading 1 paragraph style to the active paragraph.
3. In the paragraph properties (Format->Paragraph), change outline level from Text Body to Level 1. Press OK.
4. In the paragraph properties, set outline level back to Text Body. Press OK.
Steps #3 and #4 assign a direct formatting to the paragraph, explicitly setting its outline level to not follow the style's setting.
5. Open Tools->Chapter Numbering, and set level 1's paragraph style to Heading 1. Press OK.
6. Open Tools->Chapter Numbering.

=> Crash (sometimes one needs to open the dialog a few times at this point to crash).
Comment 1 Mike Kaganski 2023-03-14 08:07:28 UTC
https://gerrit.libreoffice.org/c/core/+/148837
Comment 2 Commit Notification 2023-03-14 15:16:24 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/19aa70022b23745f52258b6db192b19ba8a531fa

tdf#154179: fix pre-selection of the current outline level

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-03-15 11:19:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/f2da924f108468dcd662922e484a2ec28276b410

tdf#154179: fix pre-selection of the current outline level

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.