tdf#154179: fix pre-selection of the current outline level

This seems to always be the intention, and never worked. The pre-selection
made in SwOutlineSettingsTabPage::SetWrtShell was overridden later in the
SwOutlineSettingsTabPage::ActivatePage, because SwOutlineTabDialog::s_nNumLevel
wasn't updated to the wanted value. Additionally, it only could potentially
work when the dialog opened the SwOutlineSettingsTabPage, not the other
page (which would happen when it was active the last time when the dialog
closed).

And the active document level value must be sanitized.

Change-Id: Iefefcdcde9da0e54e3acaffb981e057367a27197
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148837
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 19aa70022b23745f52258b6db192b19ba8a531fa)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148864
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>